--- a/src/components/landing/Cta/Cta.module.css
+++ b/src/components/landing/Cta/Cta.module.css
@@ -1,5 +1,5 @@
 .section {
-    padding: 5rem 1.5rem;
+    padding: 3rem 1rem;
     background-color: var(--primary-color);
     color: #fff;
 }
@@ -12,15 +12,15 @@
 
 .title {
     font-family: var(--font-christmas);
-    font-size: 2.5rem;
+    font-size: 2rem;
     font-weight: 700;
-    margin-bottom: 1.5rem;
+    margin-bottom: 1rem;
 }
 
 .subtitle {
-    font-size: 1.25rem;
+    font-size: 1rem;
     line-height: 1.6;
-    max-width: 42rem;
+    max-width: 90%;
     margin: 0 auto 2rem auto;
     opacity: 0.9;
 }
@@ -30,6 +30,7 @@
     flex-direction: column;
     gap: 1rem;
     justify-content: center;
+    align-items: center;
 }
 
 .lightButton {
@@ -41,12 +42,37 @@
     background-color: #f1f1f1;
 }
 
+/* Tablet */
 @media (min-width: 640px) {
+    .section {
+        padding: 4rem 1.5rem;
+    }
+
+    .title {
+        font-size: 2.5rem;
+    }
+
+    .subtitle {
+        font-size: 1.125rem;
+        max-width: 42rem;
+    }
+
     .buttonGroup {
         flex-direction: row;
+    }
+}
+
+/* Desktop */
+@media (min-width: 768px) {
+    .section {
+        padding: 5rem 1.5rem;
     }
 
     .title {
         font-size: 3rem;
+    }
+
+    .subtitle {
+        font-size: 1.25rem;
     }
 }
